--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <Menu>
       <h1>Navigation</h1>
-        <a href="/2.2 Menu/Menu.html"><h3>Menu</h3></a>
+        <a href="./2.2 Menu/Menu.html"><h3>Menu</h3></a>
         <a href="/2.3 Locations/Locations.html"><h3>Locations</h3></a>
         <a href="/2.5 Games/Games.html"><h3>Games</h3></a>
         <a href="/3.1 Calendar And Events/CalendarAndEvents.html"><h3>Calendar and Events</h3>
