--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laughing Fox Tavern</title>
-    <img src="/assets/images/LaughingFoxTextLogo.png" width="100%" alignment="center"/>
+    <img src="./assets/images/LaughingFoxTextLogo.png" width="100%" alignment="center"/>
     </head>
   <body>
     <Menu>
