--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laughing Fox Tavern</title>
-    <img src="/assets/images/LaughingFoxTextLogo.png" width="100%" alignment="center"/>
+    <link rel="stylesheet" href="./style.css" />
+    <div class="logo-bar">
+      <div class="logo-fox">
+        <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
+      </div>
+      <div class="logo-text">
+        <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
+      </div>
+    </div>
     </head>
   <body>
     <Menu>
