--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
     <div class="logo-bar">
       <div class="logo-fox">
-        <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
+        <img src="assets/images/smiling fox face - 1043773044.png" width="50%"/>
       </div>
       <div class="logo-text">
-        <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
+        <img src="assets/images/LaughingFoxTextLogo.png" width="100%"/>
       </div>
     </div>
     </head>
