--- a/index.html
+++ b/index.html
@@ -5,25 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laughing Fox Tavern</title>
     <link rel="stylesheet" href="./style.css" />
-    <div class="logo-bar">
-      <div class="logo-fox">
-        <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
-      </div>
-      <div class="logo-text">
-        <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
-      </div>
-    </div>
   </head>
   <body>
- <div class="NavBox">
-    <Menu>
-      <h1>Navigation</h1>
+    <header>    
+      <div class="logo-bar">
+        <div class="logo-fox">
+          <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
+        </div>
+        <div class="logo-text">
+          <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
+        </div>
+      </div>
+    </header>
+    <div class="NavBox">
+      <Menu>
+        <h1>Navigation</h1>
         <a href="Menu.html"><h3>Menu</h3></a>
+          <a href="Breakfast.html"><h4>-  Breakfast</h4></a>
+          <a href="Dinner.html"><h4>-  Dinner</h4></a>
+        <a href="index.html"><h3>Home</h3></a>
         <a href="Locations.html"><h3>Locations</h3></a>
         <a href="Games.html"><h3>Games</h3></a>
         <a href="CalendarAndEvents.html"><h3>Calendar and Events</h3>
         <a href="About.html"><h3>About</h3></a>
-    </Menu>
+      </Menu>
     </div>
   </body>
 </html>
