--- a/Menu.html
+++ b/Menu.html
@@ -5,12 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Laughing Fox Tavern</title>
     <link rel="stylesheet" href="./style.css" />
-    <div class="logo-bar">
-    <img src="/assets/images/smiling fox face - 1043773044.png" width="200px">
-    <img src="/assets/images/LaughingFoxTextLogo.png" width="100%" alignment="center"/>
-    </div>
   </head>
   <body>
+    <header>    
+        <div class="logo-bar">
+          <div class="logo-fox">
+            <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
+          </div>
+          <div class="logo-text">
+            <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
+          </div>
+        </div>
+    </header>
+      <div class="NavBox">
+        <Menu>
+          <h1>Navigation</h1>
+          
+          <a href="Menu.html"><h3>Menu</h3></a>
+             <a href="Breakfast.html"><h4>-  Breakfast</h4></a>
+             <a href="Dinner.html"><h4>-  Dinner</h4></a>
+          <a href="index.html"><h3>Home</h3></a>
+          <a href="Locations.html"><h3>Locations</h3></a>
+          <a href="Games.html"><h3>Games</h3></a>
+          <a href="CalendarAndEvents.html"><h3>Calendar and Events</h3>
+          <a href="About.html"><h3>About</h3></a>
+          
+        </Menu>
+      </div>
+    <div class="contentbox">
     <h1>Menu</h1>
     <hr/>
         <h2>Breakfast 0700 - 1200</h2>
@@ -22,16 +44,22 @@
                 <p>Chocolate, Almond or Plain</p>
         <h2>Beverages - Served All Day</h2>
             <h3>Coffee and Espresso Drinks</h3>
+            <ul>
                 <h4>Hot Coffee</h4>
                 <h4>Iced Coffee</h4>
                 <h4>Latte</h4>
                 <h4>Cappucino</h4>
+            </ul>
             <h3>Tea</h3>
+            <ul>
                 <h4>Green Tea</h4>
                 <h4>Matcha</h4>
                 <h4>Chai</h4>
                 <h4>Today's Special</h4>
+            </ul>
             <h3>Water</h3>
             <h3>Orange Juice</h3>
             <h3>Apple Juice</h3>
-
+</div>
+</body>
+</html>
