--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <header>    
       <div class="logo-bar">
         <div class="logo-fox">
-          <img src="/assets/images/smiling fox face - 1043773044.png" width="50%"/>
+          <img src="assets/images/smiling fox face - 1043773044.png" width="50%"/>
         </div>
         <div class="logo-text">
-          <img src="/assets/images/LaughingFoxTextLogo.png" width="100%"/>
+          <img src="assets/images/LaughingFoxTextLogo.png" width="100%"/>
         </div>
       </div>
     </header>
